Revert "Revert "Fix header overlapping and self-host font/css""
This reverts commit 7d139b23bfc491f84c0a044c4b09e4f1de2d0f23.

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,13 @@
-@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
+@import "/css/bulma.min.css";
+
+@font-face {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(/fonts/KFOlCnqEu92Fr1MmEU9fBBc4.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 h1 { 
     font-size: 4rem;
@@ -129,8 +138,6 @@ a:hover { color: #4069fd; }
         flex-direction: column;
         align-items: flex-start;
     }
-
-    .content h1 { position:relative; }
 }
 
 /* Mobile */
